adding automation scripts and custom files to generate and benchmark augmented results for journal paper

--- a/src/final_evaluations_mi_multi.ipynb
+++ b/src/final_evaluations_mi_multi.ipynb
@@ -132,6 +132,9 @@
     "parser.add_argument(\n",
     "    \"--imagery_data_path\",type=str, default=None\n",
     ")\n",
+    "parser.add_argument(\n",
+    "    \"--output_path\",type=str, default=\"tables/\"\n",
+    ")\n",
     "if utils.is_interactive():\n",
     "    args = parser.parse_args(jupyter_args)\n",
     "else:\n",
@@ -183,25 +186,25 @@
     "    f = h5py.File(f'{data_path}/coco_images_224_float16.hdf5', 'r')\n",
     "    images = f['images']\n",
     "    # for the shared1000 git caption generation\n",
-    "    from transformers import AutoProcessor\n",
-    "    from modeling_git import GitForCausalLMClipEmb\n",
-    "    processor = AutoProcessor.from_pretrained(\"microsoft/git-large-coco\")\n",
-    "    git_text_model = GitForCausalLMClipEmb.from_pretrained(\"microsoft/git-large-coco\")\n",
-    "    git_text_model.to(device) \n",
-    "    git_text_model.eval().requires_grad_(False)\n",
-    "    all_git_generated_captions = []\n",
+    "    # from transformers import AutoProcessor\n",
+    "    # from modeling_git import GitForCausalLMClipEmb\n",
+    "    # processor = AutoProcessor.from_pretrained(\"microsoft/git-large-coco\")\n",
+    "    # git_text_model = GitForCausalLMClipEmb.from_pretrained(\"microsoft/git-large-coco\")\n",
+    "    # git_text_model.to(device) \n",
+    "    # git_text_model.eval().requires_grad_(False)\n",
+    "    # all_git_generated_captions = []\n",
     "\n",
     "    all_images = torch.zeros((len(test_nsd_ids), 3, 224, 224))\n",
     "    for i, idx in enumerate(test_nsd_ids):\n",
     "        all_images[i] =  torch.from_numpy(images[idx])\n",
     "        # for the git captions\n",
-    "        pil_image = (images[idx].transpose((1, 2, 0))*255).astype(np.uint8)\n",
-    "        inputs = processor(images=pil_image, return_tensors=\"pt\").pixel_values.to(device)\n",
-    "        outputs = git_text_model.git.image_encoder(inputs).last_hidden_state\n",
-    "        generated_ids = git_text_model.generate(pixel_values=outputs, max_length=50)\n",
-    "        decoded_caption = processor.batch_decode(generated_ids, skip_special_tokens=True)\n",
-    "        all_git_generated_captions = np.hstack((all_git_generated_captions, decoded_caption))\n",
-    "    torch.save(all_git_generated_captions,f\"evals/{model_name}/shared1000_imgcaptions.pt\")\n",
+    "    #     pil_image = (images[idx].transpose((1, 2, 0))*255).astype(np.uint8)\n",
+    "    #     inputs = processor(images=pil_image, return_tensors=\"pt\").pixel_values.to(device)\n",
+    "    #     outputs = git_text_model.git.image_encoder(inputs).last_hidden_state\n",
+    "    #     generated_ids = git_text_model.generate(pixel_values=outputs, max_length=50)\n",
+    "    #     decoded_caption = processor.batch_decode(generated_ids, skip_special_tokens=True)\n",
+    "    #     all_git_generated_captions = np.hstack((all_git_generated_captions, decoded_caption))\n",
+    "    # torch.save(all_git_generated_captions,f\"evals/{model_name}/shared1000_imgcaptions.pt\")\n",
     "    del images, f\n",
     "    print(f\"Filtered down to only the {len(test_nsd_ids)} test images for subject {subj}!\")\n",
     "else:\n",
@@ -303,7 +306,7 @@
    "outputs": [],
    "source": [
     "@torch.no_grad()\n",
-    "def two_way_identification(all_recons, all_images, model, preprocess, feature_layer=None, return_avg=False):\n",
+    "def two_way_identification(all_recons, all_images, model, preprocess, feature_layer=None, return_avg=False, return_features=False):\n",
     "    preds = model(torch.stack([preprocess(recon) for recon in all_recons], dim=0).to(device))\n",
     "    reals = model(torch.stack([preprocess(indiv) for indiv in all_images], dim=0).to(device))\n",
     "    if feature_layer is None:\n",
@@ -345,6 +348,8 @@
     "    if return_avg:\n",
     "        # Return the average success rate\n",
     "        return np.mean(success_counts)\n",
+    "    elif return_features:\n",
+    "        return success_counts, preds, reals\n",
     "    else:\n",
     "        # Return the list of success rates per reconstructed image\n",
     "        return success_counts"
@@ -813,8 +818,8 @@
     "    df = pd.DataFrame(metrics_data)\n",
     "\n",
     "    # Save the table to a CSV file\n",
-    "    os.makedirs('tables/', exist_ok=True)\n",
-    "    df.to_csv(f'tables/{model_name_plus_suffix}.csv', sep='\\t')\n",
+    "    os.makedirs(output_path, exist_ok=True)\n",
+    "    df.to_csv(f'{output_path}{model_name_plus_suffix}.csv', sep='\\t')\n",
     "\n"
    ]
   },
@@ -1101,9 +1106,9 @@
     "            \"CLIP-L_relative\":relative_brain_image_clip_L.mean().item(),\n",
     "            }\n",
     "\n",
-    "os.makedirs('tables/',exist_ok=True)\n",
+    "os.makedirs(output_path,exist_ok=True)\n",
     "df=pd.DataFrame.from_dict(caption_metrics,orient='index',columns=[\"Value\"])\n",
-    "df.to_csv(f'tables/{model_name_plus_suffix}_caption_metrics.csv', sep='\\t', index=False)"
+    "df.to_csv(f'{output_path}{model_name_plus_suffix}_caption_metrics.csv', sep='\\t', index=False)"
    ]
   }
  ],
